additional fix for spell check
Signed-off-by: Diego Yabuki <diegoken.yabuki@tier4.jp>

--- a/usecases/UC-NTR-001-0002.feature.md
+++ b/usecases/UC-NTR-001-0002.feature.md
@@ -19,12 +19,12 @@ Confirm that the vehicle departs during an overtake maneuver by a slower vehicle
 
 ### Examples: Left side overtake
 
-  | vxi_npc0 | dr    | df    | overtake_offset | w     | amin_ego   |
+  | <vxi_npc0> | <dr>    | <df>    | <overtake_offset> | <w>     | <amin_ego>   |
   | -------- | ----- | ----- | --------------- | ----- | ---------- |
   |  5 km/h  | 7.0 m | 5.0 m | 2.5 m           | 3.0 m | -1.5 m/s^2 |
 
 ### Examples: Right side overtake
 
-  | vxi_npc0 | dr    | df    | overtake_offset | w     | amin_ego   |
+  | <vxi_npc0> | <dr>    | <df>    | <overtake_offset> | <w>     | <amin_ego>   |
   | -------- | ----- | ----- | --------------- | ----- | ---------- |
   |  5 km/h  | 7.0 m | 5.0 m | -2.5 m          | 3.0 m | -1.5 m/s^2 |
