--- a/usecases/UC-NTR-001-0007.feature.md
+++ b/usecases/UC-NTR-001-0007.feature.md
@@ -17,7 +17,7 @@ Confirm that the ego vehicle does not slow down when a faster vehicle cuts in.
 
 ### Examples
 
-| vxi_npc0 | vxi_ego | d_lc_npc0 | w     | amin_ego    |
+| <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <w>     | <amin_ego>    |
 | -------- | ------- | --------- | ----- | ----------- |
 | 18 km/h  | 15 km/h | 1.0 m     | 3.0 m | -0.05 m/s^2 |
 | 20 km/h  | 15 km/h | 1.0 m     | 3.0 m | -0.05 m/s^2 |
