--- a/usecases/pov/UC-PLN-001-0001.feature.md
+++ b/usecases/pov/UC-PLN-001-0001.feature.md
@@ -21,7 +21,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 ### Examples: 
 
-  | vxi_ego | vxi_npc0 | axmin_ego  |
+  | <vxi_ego> | <vxi_ego> | <axmin_ego>  |
   | ------- | -------- | ---------- |
   | 20 km/h | 15 km/h  | -1.5 m/s^2 |
   | 30 km/h | 20 km/h  | -1.5 m/s^2 |
@@ -49,7 +49,7 @@ Confirm that ego is able to continuously adjust its speed such as to maintain a 
 
 ### Examples:
 
-  | vxi_ego | vxi_npc0 | axmin_ego  | vx_npc0 | ax_npc0    |
+  | <vxi_ego> | <vxi_ego> | <axmin_ego>  | <vxi_ego> | <ax_npc0>    |
   | ------- | -------- | ---------- | ------- | ---------- |
   | 20 km/h | 15 km/h  | -1.5 m/s^2 | 10 km/h | -1.0 m/s^2 |
   | 30 km/h | 20 km/h  | -1.5 m/s^2 | 12 km/h | -1.0 m/s^2 |
@@ -76,7 +76,7 @@ Confirm that ego is able to continuously adjust its speed such as to maintain a 
 
 ### Examples:
 
-  | vxi_ego | vxi_npc0 | axmin_ego  | ax_npc0    |
+  | <vxi_ego> | <vxi_ego> | <axmin_ego>  | <ax_npc0>    |
   | ------- | -------- | ---------- | ---------- |
   | 20 km/h | 15 km/h  | -1.5 m/s^2 | -1.0 m/s^2 |
   | 30 km/h | 20 km/h  | -1.5 m/s^2 | -1.0 m/s^2 |
@@ -100,7 +100,7 @@ Confirm that ego is able to stop safely when a stopped vehicle is detected ahead
 
 ### Examples: 
 
-  | vxi_ego  | dxi_ego_npc0 | axmin_ego  |
+  | <vxi_ego>  | <dxi_ego_npc0> | <axmin_ego>  |
   | -------- | ------------ | ---------- |
   | 90 km/h  | 150 m        | -1.5 m/s^2 |
   | 100 km/h | 150 m        | -1.5 m/s^2 |
