--- a/usecases/pov/UC-PLN-001-0006.feature.md
+++ b/usecases/pov/UC-PLN-001-0006.feature.md
@@ -24,7 +24,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 ### Examples: 
 
-  | vxi_ego | vxi_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | vx_motorbike1 | ax_motorbike0 | time_cut_in_npc0 | axmin_ego  |
+  | <vxi_ego> | <vxi_ego> | <vxi_ego> | <vxi_ego> | <vxi_ego> | <vxi_ego> | <time_cut_in_npc0> | <axmin_ego>  |
   | ------- | -------- | ------------------- | ----------- | ------------  | ------------- | ---------------- | ---------- |
   | 20 km/h | 15 km/h  | 15 m                | 15 m        | 5 km/h        | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
   | 30 km/h | 20 km/h  | 15 m                | 15 m        | 10 km/h       | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
@@ -53,7 +53,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 ### Examples: 
 
-  | vxi_ego | vxi_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | vx_motorbike1 | ax_motorbike0 | time_cut_in_npc0 | axmin_ego  |
+  | <vxi_ego> | <vxi_ego> | <vxi_ego> | <vxi_ego> | <vxi_ego> | <vxi_ego> | <time_cut_in_npc0> | <axmin_ego>  |
   | ------- | -------- | ------------------  | ----------- | ------------  | ------------- | ---------------- | ---------- |
   | 20 km/h | 15 km/h  | 15 m                | 15 m        | 5 km/h        | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
   | 30 km/h | 20 km/h  | 15 m                | 15 m        | 10 km/h       | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
