--- a/usecases/pov/UC-PLN-002-0001.feature.md
+++ b/usecases/pov/UC-PLN-002-0001.feature.md
@@ -18,7 +18,7 @@ Confirm that ego is able to adjust its speed before entering the new regulation 
 
 ### Examples:
 
-  | vxi_ego  | vxi_limit | vx_limit | axmin_ego  |
+  | <vxi_ego>  | <vxi_limit> | <vxi_limit> | <vxi_ego>  |
   | -------- | --------- | -------- | ---------- |
   | 70 km/h  | 70 km/h   | 60 km/h  | -1.5 m/s^2 |
   | 90 km/h  | 100 km/h  | 80 km/h  | -1.5 m/s^2 |
@@ -40,7 +40,7 @@ Confirm that ego is able to adjust its speed when entering the new regulation ar
 
 ### Examples:
 
-  | vx_ego   | vxi_limit | vx_limit |
+  | <vx_ego> | <vxi_limit> | <vxi_limit> |
   | -------- | --------- | -------- |
   | 90 km/h  | 70 km/h   | 80 km/h  |
   | 110 km/h | 80 km/h   | 120 km/h |
