--- a/usecases/pov/UC-PLN-003-0001.feature.md
+++ b/usecases/pov/UC-PLN-003-0001.feature.md
@@ -18,7 +18,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 
 ### Examples:
 
-  | vxi_ego  | initial_lane_width | lane_width | d_lane_center_offset |
+  | <vxi_ego>  | <initial_lane_width> | <lane_width> | <d_lane_center_offset> |
   | -------- | ------------------ | ---------- | -------------------- |
   | 70 km/h  | 4.5 m              | 3.0 m      | 0.15 m               |
   | 90 km/h  | 4.2 m              | 3.0 m      | 0.15 m               |
@@ -41,7 +41,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 
 ### Examples:
 
-  | vxi_ego  | initial_lane_width | lane_width | d_lane_center_offset |
+  | <vxi_ego>  | <initial_lane_width> | <lane_width> | <d_lane_center_offset> |
   | -------- | ------------------ | ---------- | -------------------- |
   | 70 km/h  | 3.7 m              | 4.5 m      | 0.15 m               |
   | 90 km/h  | 3.5 m              | 4.5 m      | 0.15 m               |
@@ -65,7 +65,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 
 ### Examples:
 
-  | vxi_ego  | d_missing_lane_marker | d_lane_center_offset |
+  | <vxi_ego>  | <d_missing_lane_marker> | <d_missing_lane_marker> |
   | -------- | --------------------- | -------------------- |
   | 70 km/h  | 50 m                  | 0.15 m               |
   | 90 km/h  | 75 m                  | 0.15 m               |
@@ -89,7 +89,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 
 ### Examples:
 
-  | vxi_ego  | d_missing_lane_marker | d_lane_center_offset |
+  | <vxi_ego>  | <d_missing_lane_marker> | <d_missing_lane_marker> |
   | -------- | --------------------- | -------------------- |
   | 70 km/h  | 50 m                  | 0.15 m               |
   | 90 km/h  | 75 m                  | 0.15 m               |
@@ -113,7 +113,7 @@ Confirm that ego is able to continue driving on the center of the lane when both
 
 ### Examples:
 
-  | vxi_ego  | d_missing_lane_marker | d_lane_center_offset |
+  | <vxi_ego>  | <d_missing_lane_marker> | <d_missing_lane_marker> |
   | -------- | --------------------- | -------------------- |
   | 70 km/h  | 50 m                  | 0.15 m               |
   | 90 km/h  | 75 m                  | 0.15 m               |
@@ -137,7 +137,7 @@ Confirm that ego is able to continue driving on the center of the lane during le
 
 ### Examples:
 
-  | vxi_ego  | road_curvature | d_lane_center_offset |
+  | <vxi_ego>  | <road_curvature> | <d_lane_center_offset> |
   | -------- | -------------- | -------------------- |
   | 70 km/h  | 0.025 1/m      | 0.15 m               |
   | 90 km/h  | 0.01 1/m       | 0.15 m               |
@@ -161,7 +161,7 @@ Confirm that ego is able to continue driving on the center of the lane during ri
 
 ### Examples:
 
-  | vxi_ego  | road_curvature | d_lane_center_offset |
+  | <vxi_ego>  | <road_curvature> | <d_lane_center_offset> |
   | -------- | -------------- | -------------------- |
   | 70 km/h  | -0.025 1/m     | 0.15 m               |
   | 90 km/h  | -0.01 1/m      | 0.15 m               |
