--- a/usecases/pov/UC-PLN-004-0002.feature.md
+++ b/usecases/pov/UC-PLN-004-0002.feature.md
@@ -23,7 +23,7 @@ Confirm that ego is able to stop safely when the preceding vehicle cuts out of e
 
 ### Examples: 
 
-  | vxi_ego  | vxi_npc0 | dxi_ego_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | time_cut_in_npc0 | axmin_ego  |
+  | <vxi_ego>  | <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <time_cut_in_npc0> | <vxi_ego>  |
   | -------- | -------- | ------------ | ------------------- | ----------- | ---------------- | ---------- |
   | 90 km/h  | 80 km/h  | 40 m         | 333 m               | 20 m        | 4 s              | -5.0 m/s^2 |
   | 100 km/h | 80 km/h  | 70 m         | 333 m               | 20 m        | 4 s              | -5.0 m/s^2 |
@@ -51,7 +51,7 @@ Confirm that ego is able to stop safely when the preceding vehicle cuts out of e
 
 ### Examples: 
 
-  | vxi_ego  | vxi_npc0 | dxi_ego_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | time_cut_in_npc0 | axmin_ego  |
+  | <vxi_ego>  | <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <time_cut_in_npc0> | <vxi_ego>  |
   | -------- | -------- | ------------ | ------------------- | ----------- | ---------------- | ---------- |
   | 90 km/h  | 80 km/h  | 40 m         | 333 m               | 20  m       | 4 s              | -5.0 m/s^2 |
   | 100 km/h | 80 km/h  | 70 m         | 333 m               | 20  m       | 4 s              | -5.0 m/s^2 |
