--- a/usecases/pov/UC-PLN-004-0003.feature.md
+++ b/usecases/pov/UC-PLN-004-0003.feature.md
@@ -20,7 +20,7 @@ Confirm that ego is able to stop safely when a pedestrian jumps into the road ah
 
 ### Examples: 
 
-  | vxi_ego  | dx_ego_pedestrian0 | time_cut_in_pedestrian0 | axmin_ego  |
+  | <vxi_ego>  | <dx_ego_pedestrian0> | <time_cut_in_pedestrian0> | <vxi_ego>  |
   | -------- | ------------------ | ----------------------- | ---------- |
   | 90 km/h  | 100 m              | 4 s                     | -5.0 m/s^2 |
   | 100 km/h | 120 m              | 4 s                     | -5.0 m/s^2 |
@@ -45,7 +45,7 @@ Confirm that ego is able to stop safely when an animal jumps into the road ahead
 
 ### Examples: 
 
-  | vxi_ego  | dx_ego_animal0 | time_cut_in_animal0 | axmin_ego  |
+  | <vxi_ego>  | <dx_ego_animal0> | <time_cut_in_animal0> | <vxi_ego>  |
   | -------- | -------------- | ------------------- | ---------- |
   | 90 km/h  | 100 m          | 4 s                 | -5.0 m/s^2 |
   | 100 km/h | 120 m          | 4 s                 | -5.0 m/s^2 |
