--- a/usecases/UC-NTR-001-0005.feature.md
+++ b/usecases/UC-NTR-001-0005.feature.md
@@ -23,7 +23,7 @@ Confirm that the vehicle waits for a high-speed overtake from the opposite direc
 
 ### Examples: Npc overtakes through left lane
 
-  | vxi_npc0 | dr    | df    | overtake_offset | w     | amin_ego   |
+  | <vxi_npc0> | <dr>    | <df>    | <overtake_offset> | <w>     | <amin_ego>   |
   | -------- | ----- | ----- | --------------- | ----- | ---------- |
   | 20 km/h  | 7.0 m | 5.0 m | 2.5 m           | 3.0 m | -1.5 m/s^2 |
   | 30 km/h  | 7.0 m | 5.0 m | 2.5 m           | 3.0 m | -1.5 m/s^2 |
