--- a/usecases/UC-NTR-001-0006.feature.md
+++ b/usecases/UC-NTR-001-0006.feature.md
@@ -19,6 +19,6 @@ Confirm that the vehicle departs while a slower vehicle overtakes from the oppos
 
 ### Examples: Left side overtake
 
-  | vxi_npc0 | dr    | df    | overtake_offset | w     | amin_ego   |
+  | <vxi_npc0> | <dr>    | <df>    | <overtake_offset> | <w>     | <amin_ego>   |
   | -------- | ----- | ----- | --------------- | ----- | ---------- |
   |  5 km/h  | 7.0 m | 5.0 m | 2.5 m           | 3.0 m | -1.5 m/s^2 |
