--- a/usecases/UC-NTR-001-0008.feature.md
+++ b/usecases/UC-NTR-001-0008.feature.md
@@ -18,7 +18,7 @@ Confirm that the vehicle safely handles a cut-in from a faster vehicle that then
 
 ### Examples
 
-| vxi_npc0 | vxi_ego | vx_target_slow_npc0 | a_slow_npc0 | d_lc_npc0 | w     | amin_ego     |
+| <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <vxi_npc0> | <w>     | <amin_ego>     |
 | -------- | ------- | ------------------- | ----------- | --------- | ----- | ------------ |
 | 20 km/h  | 15 km/h | 10 km/h             | -1.0 m/s^2  | 1.0 m     | 3.0 m | -2.499 m/s^2 |
 | 20 km/h  | 15 km/h | 12.5 km/h           | -1.0 m/s^2  | 1.0 m     | 3.0 m | -2.499 m/s^2 |
