--- a/usecases/pov/UC-PLN-001-0004.feature.md
+++ b/usecases/pov/UC-PLN-001-0004.feature.md
@@ -22,7 +22,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 ### Examples: 
 
-  | vxi_ego | vxi_motorbike0 | dx_ego_motorbike0 | time_cut_in_motorbike0 | axmin_ego  |
+  | <vxi_ego> | <vxi_ego> | <vxi_ego> | <time_cut_in_motorbike0> | <axmin_ego>  |
   | ------- | -------------- | ----------------- | ---------------------- | ---------- |
   | 20 km/h | 15 km/h        | 10 m              | 4 s                    | -1.5 m/s^2 |
   | 30 km/h | 20 km/h        | 10 m              | 4 s                    | -1.5 m/s^2 |
@@ -48,7 +48,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 ### Examples: 
 
-  | vxi_ego | vxi_motorbike0 | dx_ego_motorbike0 | time_cut_in_motorbike0 | axmin_ego  |
+  | <vxi_ego> | <vxi_ego> | <vxi_ego> | <time_cut_in_motorbike0> | <axmin_ego>  |
   | ------- | -------------- | ----------------- | ---------------------- | ---------- |
   | 20 km/h | 15 km/h        | 10 m              | 4 s                    | -1.5 m/s^2 |
   | 30 km/h | 20 km/h        | 10 m              | 4 s                    | -1.5 m/s^2 |
@@ -78,7 +78,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 ### Examples: 
 
-  | vxi_ego | vxi_motorbike0 | dx_ego_motorbike0 | time_cut_in_motorbike0 | axmin_ego  |
+  | <vxi_ego> | <vxi_ego> | <vxi_ego> | <time_cut_in_motorbike0> | <axmin_ego>  |
   | ------- | -------------- | ----------------- | ---------------------- | ---------- |
   | 20 km/h | 25 km/h        | 5 m               | 4 s                    | -1.5 m/s^2 |
   | 30 km/h | 40 km/h        | 10 m              | 4 s                    | -1.5 m/s^2 |
@@ -108,7 +108,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 ### Examples: 
 
-  | vxi_ego | vxi_motorbike0 | dx_ego_motorbike0 | time_cut_in_motorbike0 | axmin_ego  |
+  | <vxi_ego> | <vxi_ego> | <vxi_ego> | <time_cut_in_motorbike0> | <axmin_ego>  |
   | ------- | -------------- | ----------------- | ---------------------- | ---------- |
   | 20 km/h | 25 km/h        | 5 m               | 4 s                    | -1.5 m/s^2 |
   | 30 km/h | 40 km/h        | 10 m              | 4 s                    | -1.5 m/s^2 |
